[gd_scene load_steps=2 format=3 uid="uid://bec8uff01cyks"]

[ext_resource type="Script" path="res://Entry.gd" id="1_jxj4y"]

[node name="Entry" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jxj4y")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.4
anchor_right = 0.8
anchor_bottom = 0.6

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label_Username" type="Label" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Username:"

[node name="LineEdit_Username" type="LineEdit" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label_Password" type="Label" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Password:
"

[node name="LineEdit_Password" type="LineEdit" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
secret = true

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Button_Login" type="Button" parent="CanvasLayer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Login"

[node name="Button_Register" type="Button" parent="CanvasLayer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Register"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/CenterContainer/HBoxContainer/Button_Login" to="." method="_on_button_login_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/CenterContainer/HBoxContainer/Button_Register" to="." method="_on_button_register_pressed"]
